[gd_scene load_steps=3 format=3 uid="uid://d0iiqaijsg1y1"]

[ext_resource type="Theme" uid="uid://de7fb8k462lxb" path="res://Theme/PopTheme.tres" id="1_s0ja4"]
[ext_resource type="Script" uid="uid://djw0qatbronxr" path="res://Scripts/command_line.gd" id="2_svsqk"]

[node name="CommandLine" type="PanelContainer" node_paths=PackedStringArray("Text")]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 91.0
offset_top = -26.0
offset_right = -91.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_s0ja4")
script = ExtResource("2_svsqk")
Text = NodePath("VBoxContainer/TextEdit")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "X"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Cheat Code Here"
scroll_fit_content_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TextEdit"]
layout_mode = 0
offset_top = 43.5
offset_right = 87.0
offset_bottom = 155.5

[connection signal="button_down" from="VBoxContainer/HBoxContainer/Button" to="." method="OnMoveButtonDown"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Button" to="." method="OnMoveButtonUp"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="OnCloseButtonPressed"]
[connection signal="focus_entered" from="VBoxContainer/TextEdit" to="." method="OnCommandLineFocused"]
[connection signal="text_changed" from="VBoxContainer/TextEdit" to="." method="OnCommandEntered"]
